--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="error-template">
-                <h1>
-                    :) Oops!</h1>
-                <h2>
-                    Temporarily down for maintenance</h2>
-                <h1>
-                    We’ll be back soon!</h1>
+                <h1>This one for Code Deploy Testing</h1>
                 <div>
                     <p>
                         Sorry for the inconvenience but we’re performing some maintenance at the moment.
